<resources>
    <string name="app_name">BallRoller5000</string>
    <string name="title_activity_maps">BallRoller5000</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginGet">Login - Get</string>
    <string name="LoginPost">Login - Post</string>
    <string name="App">Login Application</string>
    <string name="LoginStatus">Login Status</string>
    <string name="LoginRole">Login Role</string>
    <string name="Status">Not login</string>
    <string name="Role">Not assigned</string>
    <string name="method">Login Method</string>
    <string name="Choose">Choose Method</string>
    <string name="title_activity_landing">LandingActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>
